test_src/compiler_errors/types/arithmetic/ModBoolError4.b
class ModBoolError4 {
    void test() {
        var value = true;
        println(value %= 2);
    }
}
